commiteru